--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,8 @@
     <title>Wendy Huang - I want to build tools for humans</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <!--
-    <link media="print" rel="stylesheet" href="./print.css">
-    -->
     <link rel="shortcut icon" type="image/png" href="img/myfavicon.png"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Wendy Huang, nickname Melon, enjoying life as a Front-End Engineer">
   </head>
   <body>
