--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Wendy Huang - I want to build tools for humans</title>
+    <title>Melon Huang - I want to build tools for humans</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" type="image/png" href="img/myfavicon.png"/>
