--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <section class="Intro">
         <div class="Card">
           <div class="u-text-center">
-            <img class="Card-avatar" src="img/avatar.png" alt="">
+            <img class="Card-avatar" src="img/avatar2.jpg" alt="">
             <h2 class="Card-name">Melon Huang</h2>
             <p class="Card-title">Front-end Engineer</p>
           </div>
